--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   test:
 
-    runs-on: linux-latest
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: [3.9]
