--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
         python -m pip install wheel
         pip install -r dev-requirements.txt
     - name: Static type checking with mypy
-      run: mypy --show-error-codes .
+      run: mypy --show-error-codes src test
     - name: Lint with pylint
       run: pylint test/test_trnsys_dck_parser src/trnsys_dck_parser setup.py
     - name: Test with pytest
