--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,7 +33,7 @@ jobs:
       run: mypy --show-error-codes src test
     
     - name: Lint with pylint
-      run: pylint test/test_trnsys_dck_parser src/trnsys_dck_parser setup.py
+      run: pylint test/test_trnsys_dck_parser src/trnsys_dck_parser
       
     - name: Get current time
       id: current_time
