--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,10 +16,10 @@ jobs:
 
     steps:
     
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@latest
     
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@latest
       with:
         python-version: ${{ matrix.python-version }}
     
@@ -41,7 +41,7 @@ jobs:
       
     - name: Restore and save (at end of workflow) pytest-benchmark data
       id: pytest-benchmark
-      uses: actions/cache@v4
+      uses: actions/cache@latest
       with:
         path: .benchmark
         key: pytest-benchmark-${{steps.current_time.outputs.current_time}}
@@ -49,6 +49,7 @@ jobs:
           pytest-benchmark-
     
     - name: Test with pytest
+      shell: bash {0}
       run: |
         compare_args=$(test -d .benchmark && echo --benchmark-compare --benchmark-compare-fail=mean:5%)
         pytest test \
@@ -61,13 +62,13 @@ jobs:
           $compare_args
 
     - name: Post coverage report to Coveralls
-      uses: coverallsapp/github-action@master
+      uses: coverallsapp/github-action@latest
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         path-to-lcov: test-results/coverage.lcov
         
     - name: Upload test results and coverage reports
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@latest
       with:
         name: test-results-and-coverage-report
         path: test-results
