--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -87,7 +87,7 @@ jobs:
       run: |
         sha=$(git rev-parse --short HEAD)
         ref_name=$(echo "${{github.ref_name}}" | sed 's|/|-|g')
-        echo "artifact_file_name=trnsys-dck-parser-artifacts-$sha-$ref_name" >> $env:GITHUB_OUTPUT
+        echo "artifact_file_name=trnsys-dck-parser-artifacts-$sha-$ref_name" >> $GITHUB_OUTPUT
         
     - name: Upload test results and coverage reports
       uses: actions/upload-artifact@v4
